# Discord-fact-check

./: .replit  bot.py  community.py  config.py  feedback.json  pyproject.toml  web_server.py
commands/: database.py  expose.py  help.py  truthiness.py
data/: feedback.json  rate_limits.json
utils/: ai_client.py  database.py  fact_checker.py  web_scraper.py
