[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.6",
    "asyncio>=3.4.3",
    "discord-py>=2.5.2",
    "flask>=3.1.1",
    "google-generativeai>=0.8.5",
    "openai>=1.82.1",
    "psycopg2-binary>=2.9.10",
    "trafilatura>=2.0.0",
]
